--- a/Master/CSS.css
+++ b/Master/CSS.css
@@ -61,3 +61,79 @@ body {
 	50% { transform: scale(1.1);}
     100% { transform: scale(1); }	
 }
+
+.p{
+  position:fixed;
+  right:0px;  
+  top:50px;
+  width:2px;
+  height:2px;
+  background-color: rgb(189,37,108);
+  position:fixed;
+  animation-name:particleAnimation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes particleAnimation
+{
+    from {
+        top: -100px;
+        -webkit-transform: rotate(315deg);
+    }
+    to {
+        right: calc( 100% + 100px );
+        -webkit-transform: rotate(315deg);
+    }
+}
+
+.p::before{
+  position:absolute;
+  display:block;
+  content:"";
+  width:100px;
+  left:1px;
+  top:0px;
+  height:2px;  
+  background: linear-gradient(to left, rgba(0,0,0,0) 0%,rgba(255,0,255,0.4) 100%); 
+}
+.p-1{
+  animation-duration:20s;
+  top:30%;
+}
+.p-2{
+  animation-duration:10s;
+  top:60%;
+}
+.p-3{
+  animation-duration:30s;
+  top:90%;
+}
+.p-4{
+  animation-duration:20s;
+  top:30%;
+}
+p-5{
+  animaiton-duration:20s;
+  top:10%;
+}
+p-6{
+  animaiton-duration:20s;
+  top:15%;
+}
+p-7{
+  animaiton-duration:20s;
+  bottom:20%;
+}
+p-8{
+  animaiton-duration:20s;
+  top:25%;
+}
+p-9{
+  animaiton-duration:20s;
+  top:30%;
+}
+p-10{
+  animaiton-duration:20s;
+  bottom:35%;
+}
