--- a/Master/CSS.css
+++ b/Master/CSS.css
@@ -1,13 +1,13 @@
 html, body {
 	height:100%;
-	width:auto;
+	width:auto;	
 }	
 body {
     background-image: url(Assets/Images/MartianLookingAPlanet.svg);
     background-size: cover;	
 	background-repeat: no-repeat;
 	background-position: center;    
-    margin: 0 auto;
+    margin: 0 auto;    
 }
 
 .elonmartian {
@@ -48,9 +48,9 @@ body {
 }
 
 .pulse_musk:hover {
-	font-size="36em";
+	font-size:64pt;
     animation-name: pulse_trap;
-    animation-duration: 10ms;
+    animation-duration: 1000ms;
     transform-origin:70% 70%;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
@@ -58,82 +58,89 @@ body {
 
 @keyframes pulse_trap {
     0% { transform: scale(1); }	    
-	50% { transform: scale(1.1);}
+	50% { transform: scale(1.009);}
     100% { transform: scale(1); }	
 }
 
 .p{
-  position:fixed;
-  right:0px;  
-  top:50px;
-  width:2px;
-  height:2px;
-  background-color: rgb(189,37,108);
-  position:fixed;
-  animation-name:particleAnimation;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+     position:fixed;
+     right:0em;  
+     top:3.125em;
+     width:0.125em;
+     height:0.125em;
+     background-color: rgb(189,37,108);
+     position:fixed;
+     animation-name:particleAnimation;
+     animation-timing-function: linear;
+     animation-iteration-count: infinite;
 }
 
 @keyframes particleAnimation
 {
-    from {
-        top: -100px;
+    from{
+        top: 1em;
         -webkit-transform: rotate(315deg);
     }
-    to {
-        right: calc( 100% + 100px );
+    to{
+        top: 100rem;
+        right: 100rem;
         -webkit-transform: rotate(315deg);
     }
 }
 
 .p::before{
-  position:absolute;
-  display:block;
-  content:"";
-  width:100px;
-  left:1px;
-  top:0px;
-  height:2px;  
-  background: linear-gradient(to left, rgba(0,0,0,0) 0%,rgba(255,0,255,0.4) 100%); 
+     position:absolute;
+     display:block;
+     content:"";
+     width:10em;
+     left:.0625em;
+     top:0em;
+     height:0.125em;  
+     background: linear-gradient(to left, rgba(0,0,0,0) 0%,rgba(255,0,255,0.4) 100%); 
 }
 .p-1{
-  animation-duration:20s;
-  top:30%;
+     animation-duration:20s;     
+     right:5em;
 }
-.p-2{
-  animation-duration:10s;
-  top:60%;
+
+.pv2{
+     position:fixed;     
+     right:0em;  
+     top:25em;     
+     bottom:10em;
+     width:.125em;
+     height:.125em;
+     background-color: rgb(189,37,108);     
+     position:fixed;
+     animation-name:particleAnimation2;     
+     animation-timing-function: linear;
+     animation-iteration-count: infinite;
 }
-.p-3{
-  animation-duration:30s;
-  top:90%;
+
+.pv2:before{
+    position:absolute;
+     display:block;
+     content:"";
+     width:10em;
+     left:.0625em;
+     top:0em;
+     height:0.125em;  
+    background: linear-gradient(to left, rgba(0,0,0,0) 0%,rgba(255,0,255,0.4) 100%);    
 }
-.p-4{
-  animation-duration:20s;
-  top:30%;
+
+@keyframes particleAnimation2{
+    from {
+        top: 25em;
+        -webkit-transform: rotate(315deg);
+    }
+    to {
+        top: 50em;        
+        right: 25em;        
+        -webkit-transform: rotate(315deg);        
+    }          
 }
-p-5{
-  animaiton-duration:20s;
-  top:10%;
-}
-p-6{
-  animaiton-duration:20s;
-  top:15%;
-}
-p-7{
-  animaiton-duration:20s;
-  bottom:20%;
-}
-p-8{
-  animaiton-duration:20s;
-  top:25%;
-}
-p-9{
-  animaiton-duration:20s;
-  top:30%;
-}
-p-10{
-  animaiton-duration:20s;
-  bottom:35%;
+
+.pv2-1{      
+    animation-duration:10s;
+    top:25em;
 }
